add last section

--- a/biblio.bib
+++ b/biblio.bib
@@ -33,6 +33,21 @@ isbn = {978-1-4503-5572-8},
 doi = {10.1145/3338906.3342509}
 }
 
+@book{basacchi2013codice,
+  title={Codice civile. Il nuovo codice civile aggiornato},
+  author={Basacchi, A.},
+  isbn={9788897095439},
+  url={https://books.google.it/books?id=vN1KngEACAAJ},
+  year={2013},
+  publisher={Kollesis Editrice}
+}
+
+% esempio citazione pagina web di un progetto
+@misc{spacyCli,
+  author={{IQAndreas}},
+https://spacy.io/api/cli}}
+}
+
 % esempio citazione pagina web di un progetto
 @misc{nowTwoProblems,
   author={{IQAndreas}},
