--- a/capitoli/chapter1.tex
+++ b/capitoli/chapter1.tex
@@ -40,12 +40,12 @@ In questo contesto si provano approcci tecnologici diversi, nella fattispecie l'
 
 %\section{Contesto}
 
-\section{Gare d'appalto} \label{sec:focus}
+\section{Gare d'appalto}
 Tra le funzioni di uno Stato vi sono la costruzione, la manutenzione e la messa in sicurezza delle infrastrutture di pubblica utilità, quali ad esempio gli edifici pubblici, le reti di telecomunicazione, le strade e gli ospedali di cui beneficiano i cittadini.
 La Pubblica Amministrazione, dovendo garantire una quantità così grande di infrastrutture, non esegue i lavori direttamente, ma ne delega l'attuazione pratica a delle imprese private con un appalto pubblico.
-L'appalto è un contratto con il quale una parte, detta parte appaltatrice, assume, 'con organizzazione dei mezzi necessari e con gestione a proprio rischio, l'obbligazione di compiere in favore di un'altra (committente o appaltante) un'opera o un servizio.'
+L'appalto è un contratto con il quale una parte, detta parte appaltatrice, assume, \say{con organizzazione dei mezzi necessari e con gestione a proprio rischio, l'obbligazione di compiere in favore di un'altra (committente o appaltante) un'opera o un servizio}\cite{basacchi2013codice}.
 Gli appalti pubblici sono dunque un modo per eseguire delle opere pubbliche pagando delle imprese private per la realizzazione vera e propria; la Pubblica Amministrazione deve però assicurarsi che:
-l'impresa abbia le conoscenze per portare a termine l'opera rispettando degli standard tecnici, ossia seguendo la 'regola d'arte';
+l'impresa abbia le conoscenze per portare a termine l'opera rispettando degli standard tecnici, ossia seguendo la \textbf{regola d'arte};
 l'impresa gestisca i lavori in maniera competitiva, senza comportare sprechi ingiustificati di soldi pubblici;
 l'impresa riesca a reggere lo sforzo finanziario che l'opera comporta, sia per quanto riguarda l'approvvigionamento dei materiali, sia per quanto riguarda il costo del lavoro.
 L'assegnazione di un progetto si avvale di apposita gara d'appalto, che ha come obbiettivo la selezione dell'impresa che meglio possa soddisfare questi requisiti di competenze tecniche, finanziarie e di competitività sul mercato.
@@ -53,16 +53,20 @@ L'assegnazione di un progetto si avvale di apposita gara d'appalto, che ha come 
 \section{Identificativi di progetto e di gara}
 Nell'ambito di una gara d'appalto, il progetto può essere composto da più parti singole chiamate lotti; l'assegnazione di un lotto è indipendente dagli altri, per cui diversi lotti di un progetto possono essere assegnati ad aziende differenti nell'ambito della stessa gara d'appalto.
 I documenti che andiamo ad analizzare riportano una serie di informazioni di nostro interesse, quali:
-- il Codice Unico di Progetto (CUP), che descrive univocamente il progetto d'investimento pubblico;  è un identificativo alfanumerico di quindici caratteri;
-- il Codice Identificativo di Gara (CIG), che indica in maniera univoca il lotto;
+\begin{itemize}
+\item il \textbf{Codice Unico di Progetto} (\textbf{CUP}), che descrive univocamente il progetto d'investimento pubblico;  è un identificativo alfanumerico di quindici caratteri;
+\item il \textbf{Codice Identificativo di Gara} (\textbf{CIG}), che indica in maniera univoca il lotto;
  è un identificativo alfanumerico di dieci caratteri;
+\end{itemize}
 
 \section{Lavori e importi}
 La gara d'appalto deve indicare in maniera evidente e inoppugnabile quali competenze tecniche e quali capacità finanziarie sono ritenute requisiti fondamentali per la partecipazione; qualsiasi ambiguità nei requisiti di una gara potrebbe dare adito a ricorsi e quindi a rallentare la gara stessa. 
-Il bisogno di requisiti oggettivi ha motivato l'introduzione di apposite certificazioni fornite dalle Società Organismi di Attestazione (SOA), che prendono il nome di "certificati SOA" o 'attestazioni SOA'.
+Il bisogno di requisiti oggettivi ha motivato l'introduzione di apposite certificazioni fornite dalle Società Organismi di Attestazione (SOA), che prendono il nome di \say{certificati SOA} o \say{attestazioni SOA}.
 Tali attestazioni si dividono in due macrogruppi:
-Categorie di lavori: individuano le categorie di opere dal punto di vista tecnico;
-Classifiche di importi: individuano i livelli di capacità finanziaria.
+\begin{itemize}
+\item \textbf{Categorie di lavori:} individuano le categorie di opere dal punto di vista tecnico;
+\item \textbf{Classifiche di importi:} individuano i livelli di capacità finanziaria.
+\end{itemize}
 Un bando di gara esprimerà i requisiti di progetto sotto forma di categorie e classifiche SOA, per cui un'azienda che voglia  essere ammessa alla gara dovrà possedere le attestazioni SOA richieste.
 
 
@@ -80,74 +84,74 @@ Le Classifiche d'importo, in numero di dieci, sono rese come numeri ordinali rom
 
 \subsection{Categorie di opere generali}
 \begin{itemize}
-  \item OG 1 Edifici civili e industriali
-  \item OG 2 Restauro e manutenzione dei beni immobili sottoposti a tutela
-    \item OG 3 Strade, autostrade, ponti, viadotti, ferrovie, metropolitane
-      \item OG 4 Opere d'arte nel sottosuolo
-     \item OG 5 Dighe
-       \item OG 6 Acquedotti, gasdotti, oleodotti, opere di irrigazione e di evacuazione
-       \item OG 7 Opere marittime e lavori di dragaggio
-         \item OG 8 Opere fluviali, di difesa, di sistemazione idraulica e di bonifica
-      \item OG 9 Impianti per la produzione di energia elettrica
-        \item OG 10 Impianti per la trasformazione alta/media tensione e per la distribuzione di energia elettrica in corrente alternata e continua ed impianti di pubblica illuminazione
-  \item OG 11 Impianti tecnologici
-  \item OG 12 Opere ed impianti di bonifica e protezione ambientale
-  \item OG 13 Opere di ingegneria naturalistica
+  \item OG 1: Edifici civili e industriali
+  \item OG 2: Restauro e manutenzione dei beni immobili sottoposti a tutela
+    \item OG 3: Strade, autostrade, ponti, viadotti, ferrovie, metropolitane
+      \item OG 4: Opere d'arte nel sottosuolo
+     \item OG 5: Dighe
+       \item OG 6: Acquedotti, gasdotti, oleodotti, opere di irrigazione e di evacuazione
+       \item OG 7: Opere marittime e lavori di dragaggio
+         \item OG 8: Opere fluviali, di difesa, di sistemazione idraulica e di bonifica
+      \item OG 9: Impianti per la produzione di energia elettrica
+        \item OG 10: Impianti per la trasformazione alta/media tensione e per la distribuzione di energia elettrica in corrente alternata e continua ed impianti di pubblica illuminazione
+  \item OG 11: Impianti tecnologici
+  \item OG 12: Opere ed impianti di bonifica e protezione ambientale
+  \item OG 13: Opere di ingegneria naturalistica
 \end{itemize}
 
 \subsection{Categorie di opere specializzate}
 \begin{itemize}
-  \item OS 1 Lavori in terra
-  \item OS 2-A Superfici decorate di beni immobili del patrimonio culturale e beni culturali mobili di interesse storico, artistico, archeologico ed etnoantropologico
-  \item OS 2-B Beni culturali mobili di interesse archivistico e librario
-  \item OS 3 Impianti idrico-sanitario, cucine, lavanderie
-  \item OS 4 Impianti elettromeccanici trasportatori
-  \item OS 5 Impianti pneumatici e antintrusione
-  \item OS 6 Finiture di opere generali in materiali lignei, plastici, metallici e vetrosi
-  \item OS 7 Finiture di opere generali di natura edile e tecnica
-  \item OS 8 Opere di impermeabilizzazione
-  \item OS 9 Impianti per la segnaletica luminosa e la sicurezza del traffico
-  \item OS 10 Segnaletica stradale non luminosa
-  \item OS 11 Apparecchiature strutturali speciali
-  \item OS 12-A Barriere stradali di sicurezza
-  \item OS 12-B Barriere paramassi, fermaneve e simili
-  \item OS 13 Strutture prefabbricate in cemento armato
-  \item OS 14 Impianti di smaltimento e recupero rifiuti
-  \item OS 15 Pulizia di acque marine, lacustri, fluviali
-  \item OS 16 Impianti per centrali produzione energia elettrica
-  \item OS 17 Linee telefoniche ed impianti di telefonia
-  \item OS 18-A Componenti strutturali in acciaio
-  \item OS 18-B Componenti per facciate continue
-  \item OS 19 Impianti di reti di telecomunicazione e di trasmissioni e trattamento
-  \item OS 20-A Rilevamenti topografici
-  \item OS 20-B Indagini geognostiche
-  \item OS 21 Opere strutturali speciali
-  \item OS 22 Impianti di potabilizzazione e depurazione
-  \item OS 23 Demolizione di opere
-  \item OS 24 Verde e arredo urbano
-  \item OS 25 Scavi archeologici
-  \item OS 26 Pavimentazioni e sovrastrutture speciali
-  \item OS 27 Impianti per la trazione elettrica
-  \item OS 28 Impianti termici e di condizionamento
-  \item OS 29 Armamento ferroviario
-  \item OS 30 Impianti interni elettrici, telefonici, radiotelefonici e televisivi
-  \item OS 31 Impianti per la mobilità sospesa
-  \item OS 32 Strutture in legno
-  \item OS 33 Coperture speciali
-  \item OS 34 Sistemi antirumore per infrastrutture di mobilità
-  \item OS 35 Interventi a basso impatto ambientale
+  \item OS 1: Lavori in terra
+  \item OS 2-A: Superfici decorate di beni immobili del patrimonio culturale e beni culturali mobili di interesse storico, artistico, archeologico ed etnoantropologico
+  \item OS 2-B: Beni culturali mobili di interesse archivistico e librario
+  \item OS 3: Impianti idrico-sanitario, cucine, lavanderie
+  \item OS 4: Impianti elettromeccanici trasportatori
+  \item OS 5: Impianti pneumatici e antintrusione
+  \item OS 6: Finiture di opere generali in materiali lignei, plastici, metallici e vetrosi
+  \item OS 7: Finiture di opere generali di natura edile e tecnica
+  \item OS 8: Opere di impermeabilizzazione
+  \item OS 9: Impianti per la segnaletica luminosa e la sicurezza del traffico
+  \item OS 10: Segnaletica stradale non luminosa
+  \item OS 11: Apparecchiature strutturali speciali
+  \item OS 12-A: Barriere stradali di sicurezza
+  \item OS 12-B: Barriere paramassi, fermaneve e simili
+  \item OS 13: Strutture prefabbricate in cemento armato
+  \item OS 14: Impianti di smaltimento e recupero rifiuti
+  \item OS 15: Pulizia di acque marine, lacustri, fluviali
+  \item OS 16: Impianti per centrali produzione energia elettrica
+  \item OS 17: Linee telefoniche ed impianti di telefonia
+  \item OS 18-A: Componenti strutturali in acciaio
+  \item OS 18-B: Componenti per facciate continue
+  \item OS 19: Impianti di reti di telecomunicazione e di trasmissioni e trattamento
+  \item OS 20-A: Rilevamenti topografici
+  \item OS 20-B: Indagini geognostiche
+  \item OS 21: Opere strutturali speciali
+  \item OS 22: Impianti di potabilizzazione e depurazione
+  \item OS 23: Demolizione di opere
+  \item OS 24: Verde e arredo urbano
+  \item OS 25: Scavi archeologici
+  \item OS 26: Pavimentazioni e sovrastrutture speciali
+  \item OS 27: Impianti per la trazione elettrica
+  \item OS 28: Impianti termici e di condizionamento
+  \item OS 29: Armamento ferroviario
+  \item OS 30: Impianti interni elettrici, telefonici, radiotelefonici e televisivi
+  \item OS 31: Impianti per la mobilità sospesa
+  \item OS 32: Strutture in legno
+  \item OS 33: Coperture speciali
+  \item OS 34: Sistemi antirumore per infrastrutture di mobilità
+  \item OS 35: Interventi a basso impatto ambientale
 \end{itemize}
 
 \subsection{Classifiche importo }
 \begin{itemize}
-  \item I classifica, fino a euro 258.000
-  \item II classifica, fino a euro 516.000
-  \item III classifica, fino a euro 1.033.000
-  \item III bis classifica, fino a euro 1.500.000
-  \item IV classifica, fino a euro 2.582.000
-  \item IV bis classifica, fino a euro 3.500.000
-  \item V classifica, fino a euro 5.165.000
-  \item VI classifica, fino a euro 10.329.000
-  \item VII classifica, fino a euro 15.494.000
-  \item VIII classifica, oltre euro 15.494.000
+  \item I classifica: fino a euro 258.000
+  \item II classifica: fino a euro 516.000
+  \item III classifica: fino a euro 1.033.000
+  \item III bis classifica: fino a euro 1.500.000
+  \item IV classifica: fino a euro 2.582.000
+  \item IV bis classifica: fino a euro 3.500.000
+  \item V classifica: fino a euro 5.165.000
+  \item VI classifica: fino a euro 10.329.000
+  \item VII classifica: fino a euro 15.494.000
+  \item VIII classifica: oltre euro 15.494.000
 \end{itemize}  
