--- a/maietta.tex
+++ b/maietta.tex
@@ -181,6 +181,9 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 %\chapter[Machine Learning][]{5. Machine Learning}
 \input{capitoli/machinelearning.tex}
 
+\chapter[Valutazione dei risultati][]{5. Valutazione dei risultati}
+\input{capitoli/chapter5.tex}
+
 %\section{6}
 %\input{capitoli/6-implementazione.tex}
 
