--- a/capitoli/chapter4.tex
+++ b/capitoli/chapter4.tex
@@ -133,7 +133,7 @@ mi assicuro che le lettere siano effettivamente numeri piuttosto che inizi di pa
 Regex adoperata:
 
 \begin{Verbatim}
-class\_regex ='(IV bis|IV|III|II|IX|VIII|VII|VI|X|V|I)[^\w]'
+class_regex ='(IV bis|IV|III|II|IX|VIII|VII|VI|X|V|I)[^\w]'
 \end{Verbatim}
  
 
