--- a/maietta.tex
+++ b/maietta.tex
@@ -57,6 +57,41 @@
 \usepackage{dirtytalk}
 \usepackage{amsmath}
 \usepackage{fancyvrb}
+\usepackage{graphicx}
+%\usepackage{wrapfig}
+\usepackage{listings}
+
+\usepackage{xcolor}
+
+%New colors defined below
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+%Code listing style named "mystyle"
+\lstdefinestyle{mystyle}{
+  backgroundcolor=\color{backcolour}, commentstyle=\color{codegreen},
+  keywordstyle=\color{magenta},
+  numberstyle=\tiny\color{codegray},
+  stringstyle=\color{codepurple},
+  basicstyle=\ttfamily\footnotesize,
+  breakatwhitespace=false,         
+  breaklines=true,                 
+  captionpos=b,                    
+  keepspaces=true,                 
+  numbers=left,                    
+  numbersep=5pt,                  
+  showspaces=false,                
+  showstringspaces=false,
+  showtabs=false,                  
+  tabsize=2
+}
+\lstset{style=mystyle}
+
+
+
+
 \begin{document}
 
 \ateneo{Politecnico di Torino}
@@ -162,8 +197,7 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 %\input{capitoli/1-introduzione.tex}
 
 
-\titleformat{\chapter}[display]
-  {\normalfont\bfseries}{}{0pt}{\Large}
+%\titleformat{\chapter}[display]  {\normalfont\bfseries}{}{0pt}{\Large}
 
 \chapter[Estrazione di dati da testi della pubblica amministrazione][]{1. Estrazione di dati da testi della pubblica amministrazione}
 \input{capitoli/chapter1.tex}
